# cppcalculatorproj

./: .gitignore  CMakeLists.txt  Calculator.cpp  Calculator.hpp  README.md  main.cpp
src/: main.cpp
src/calculator/: Calculator.cpp  Calculator.hpp  ScientificCalculator.cpp  ScientificCalculator.hpp
src/ui/: Menu.cpp  Menu.hpp
src/utils/: MathUtils.cpp  MathUtils.hpp
